// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ atoms / Link ] #Link when 'Link' Colors is mounted should render 1`] = `
<DocumentFragment>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-md weight-semibold is-inline"
    >
      Mouths Muil
    </p>
  </a>
  <a
    class="link color-tertiary"
  >
    <p
      class="paragraph color-tertiary size-md weight-semibold is-inline"
    >
      Mouths Muil
    </p>
  </a>
</DocumentFragment>
`;

exports[`[ atoms / Link ] #Link when 'Link' Default is mounted should render 1`] = `
<DocumentFragment>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-md weight-semibold is-inline"
    >
      Mouths Muil
    </p>
  </a>
</DocumentFragment>
`;

exports[`[ atoms / Link ] #Link when 'Link' Sizes is mounted should render 1`] = `
<DocumentFragment>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-xs weight-semibold is-inline"
    >
      Mouths Muil
    </p>
  </a>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-sm weight-semibold is-inline"
    >
      Mouths Muil
    </p>
  </a>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-md weight-semibold is-inline"
    >
      Mouths Muil
    </p>
  </a>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-lg weight-semibold is-inline"
    >
      Mouths Muil
    </p>
  </a>
</DocumentFragment>
`;
